--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Latorre Dev</title>
+    <title>VentasLab</title>
     <!-- <link rel="icon" type="image/webp" href="assets/img/*" -->>
     <!-- <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro" rel="stylesheet"> -->
     <link href="assets/css/styles.css" rel="stylesheet">
