--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="assets/css/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">  <!--Fa icons for firefox-->
-    <script src="/assets/Js/scripts.js"></script>
+    <!-- <script src="/assets/Js/scripts.js"></script> -->
 </head>
 
 <body>
