Add basic structure to index

--- a/index.html
+++ b/index.html
@@ -13,8 +13,46 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">  <!--Fa icons for firefox-->
     <!-- <script src="/assets/Js/scripts.js"></script> -->
 </head>
-
 <body>
-    
+    <header class="header">
+        <div class="wrapper">
+            <figure class="logo">
+                <!-- <img src="assets/Img/*" height="50px" alt="Logo"> -->
+            </figure>
+            <nav class="menu">
+                <ol>
+                    <li>
+                        <a class="link" href="#calltoaction">Probar Ahora</a> 
+                    </li>
+                </ol>
+            </nav>
+        </div>
+    </header>
+
+    <section class="hero">
+            <div class="wrapper">
+               
+                <img class="hero-image" src="assets/Img/*" alt="Image" width="420px">
+                <h1>
+                    lorem ipsum
+                </h1>
+            </div>
+    </section>
+
+    <section id="Information" class="information">
+            <div class="wrapper">
+
+            </div>
+    </section>
+
+    <section  class="calltoaction">
+            <div class="wrapper">
+            </div>
+    </section>
+
+    <section  class="footer">
+            <div class="wrapper">
+            </div>
+    </section>    
 </body>
 </html>
