Add basic structure to index

--- a/index.html
+++ b/index.html
@@ -41,7 +41,17 @@
 
     <section id="Information" class="information">
             <div class="wrapper">
+                <article class="feature">
+                    lorem ipsum
+                </article>
 
+                <article class="feature">
+                    lorem ipsum
+                </article>
+
+                <article class="feature">
+                    lorem ipsum
+                </article>
             </div>
     </section>
 
