Final Alpha no responsive

--- a/index.html
+++ b/index.html
@@ -49,26 +49,63 @@
     <section id="Information" class="information">
             <div class="wrapper">
                 <article class="feature">
-                    lorem ipsum
+                        <figure class="information-imageContainer">
+                                <img class="information-image" src="assets/img/socialNetworks.png" alt="Social Networks" width="auto">
+                        </figure>
+                    <div>    
+                    <h1>Analiza</h1>
+                    <p>
+                    de manera rápida y eficiente la información de las herramientas más populares 
+                    para ventas (Google Analytics, Facebook Ads, WhatsApp, Telegram)
+                    </p>
+                    </div>
                 </article>
 
                 <article class="feature">
-                    lorem ipsum
+                        <figure class="information-imageContainer">
+                                <img class="information-image" src="assets/img/information_circle.png" alt="information" width="auto">
+                        </figure>
+                        <div>
+                    <h1>Interpreta</h1>
+                    <p>Unifica la información en un solo lugar, toma decisiones de forma más fácil y rápida,
+                        alcanza tus metas en ventas.
+                    </p>
+                        </div>
                 </article>
 
                 <article class="feature">
-                    lorem ipsum
+                        <figure class="information-imageContainer">
+                                <img class="information-image" src="assets/img/data.png" alt="data" width="auto">
+                        </figure>
+                    <div>
+                    <h1>Toma acción</h1>
+                    <p>Los datos son el petróleo del siglo XXI, entiende el mercado, toma 
+                        la ventaja ofreciendo soluciones a la medida</p>
+                    </div>
                 </article>
             </div>
+
     </section>
 
-    <section  class="calltoaction">
-            <div class="wrapper">
+    <section  class="calltoaction"> 
+    <div class="wrapper">
+            <!--<form action="/demo/" class="form-email">
+                <input type="text" placeholder="Inicia tu prueba gratis hoy">
+                <div>
+                <button class="botoncito">demo</button>
+                </div>
+            </form>
+            -->
+            <div>
+            <h1>Inicia tu prueba gratis hoy</h1>
             </div>
+            <button>Demo</button>
+        </div>
     </section>
 
     <section  class="footer">
             <div class="wrapper">
+                    <p>Designed by  <a href="latorredev.com">David Latorre</a> click to visit his web </p>
             </div>
     </section>    
 </body>
