fixed link on probar ahora

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav class="menu">
                 <ol>
                     <li>
-                        <a class="link" href="#calltoaction">Probar Ahora</a> 
+                        <a class="link" href="#Calltoaction">Probar Ahora</a> 
                     </li>
                 </ol>
             </nav>
@@ -87,7 +87,7 @@
 
     </section>
 
-    <section  class="calltoaction"> 
+    <section id="Calltoaction" class="calltoaction"> 
     <div class="wrapper">
             <!--<form action="/demo/" class="form-email">
                 <input type="text" placeholder="Inicia tu prueba gratis hoy">
