add final points to some paragraphs and include instagram on social networks

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                 <p class="description">
                     VentasLab te ayuda a interpretar datos.
-                    Agrupa, controla y transforma la información de tus clientes en ventas
+                    Agrupa, controla y transforma la información de tus clientes en ventas.
                 </p>
             </div>
     </section>
@@ -56,7 +56,7 @@
                     <h1>Analiza</h1>
                     <p>
                     de manera rápida y eficiente la información de las herramientas más populares 
-                    para ventas (Google Analytics, Facebook Ads, WhatsApp, Telegram)
+                    para ventas (Google Analytics, Facebook Ads, Instagram, WhatsApp, Telegram)
                     </p>
                     </div>
                 </article>
@@ -80,7 +80,7 @@
                     <div>
                     <h1>Toma acción</h1>
                     <p>Los datos son el petróleo del siglo XXI, entiende el mercado, toma 
-                        la ventaja ofreciendo soluciones a la medida</p>
+                        la ventaja ofreciendo soluciones a la medida.</p>
                     </div>
                 </article>
             </div>
