Fix footer and cover

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <section  class="footer">
             <div class="wrapper">
-                    <p>Designed by  <a href="https://latorredev.com" target="_blank">David Latorre</a> click to visit his web </p>
+                    <p>Designed by VentasLab</p>
             </div>
     </section>    
 </body>
