add link to demo button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav class="menu">
                 <ol>
                     <li>
-                        <a class="link" href="#Calltoaction">Probar Ahora</a> 
+                        <a class="link" href="/polly">Probar Ahora</a> 
                     </li>
                 </ol>
             </nav>
@@ -99,7 +99,7 @@
             <div>
             <h1>Inicia tu prueba gratis hoy</h1>
             </div>
-            <button>Demo</button>
+             <a href="/polly">demo</a>
         </div>
     </section>
 
