fixin css w/ sass & some html

--- a/index.html
+++ b/index.html
@@ -2,111 +2,106 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>VentasLab</title>
-    <link rel="icon" type="image/webp" href="assets/img/favicon.ico">
-    <!-- <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico"> -->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet"> 
-    <link href="assets/css/styles.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">  <!--Fa icons for firefox-->
-    <!-- <script src="/assets/Js/scripts.js"></script> -->
+	<title>VentasLab</title>
+
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="icon" type="image/webp" href="img/favicon.ico">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet">
+	<link href="css/styles.css" rel="stylesheet">
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
+	<!--Fa icons for firefox-->
 </head>
+
 <body>
-    <header class="header">
-        <div class="wrapper">
-            <figure class="logo">
-                <img src="assets/img/logo.png" height="50px" alt="Logo">
-            </figure>
-            <nav class="menu">
-                <ol>
-                    <li>
-                        <a class="link" href="#Calltoaction">Probar Ahora</a> 
-                    </li>
-                </ol>
-            </nav>
-        </div>
-    </header>
+	<header class="header">
+		<div class="wrapper">
+			<figure class="logo">
+				<img src="img/logo.png" height="50px" alt="Logo">
+			</figure>
+			<nav class="menu">
+				<ol>
+					<li>
+						<a class="link" href="/polly">Probar Ahora</a>
+					</li>
+				</ol>
+			</nav>
+		</div>
+	</header>
 
-    <section class="hero">
-            
-            <div class="wrapper">
-                    <img class="hero-image" src="assets/img/circle_sales.png" alt="Image">
-                    
-                <h1>
-                    Lo que no se puede medir, no se puede gestionar
-                </h1>
+	<section class="hero">
 
-                <p class="description">
-                    VentasLab te ayuda a interpretar datos.
-                    Agrupa, controla y transforma la información de tus clientes en ventas.
-                </p>
-            </div>
-    </section>
+		<div class="wrapper">
+			<img class="hero-image" src="img/circle_sales.png" alt="Image">
 
-    <section id="Information" class="information">
-            <div class="wrapper">
-                <article class="feature">
-                        <figure class="information-imageContainer">
-                                <img class="information-image" src="assets/img/socialNetworks.png" alt="Social Networks" width="auto">
-                        </figure>
-                    <div>    
-                    <h1>Analiza</h1>
-                    <p>
-                    de manera rápida y eficiente la información de las herramientas más populares 
-                    para ventas (Google Analytics, Facebook Ads, Instagram, WhatsApp, Telegram)
-                    </p>
-                    </div>
-                </article>
+			<h1>
+				Lo que no se puede medir, no se puede gestionar
+			</h1>
 
-                <article class="feature">
-                        <figure class="information-imageContainer">
-                                <img class="information-image" src="assets/img/information_circle.png" alt="information" width="auto">
-                        </figure>
-                        <div>
-                    <h1>Interpreta</h1>
-                    <p>Unifica la información en un solo lugar, toma decisiones de forma más fácil y rápida,
-                        alcanza tus metas en ventas.
-                    </p>
-                        </div>
-                </article>
+			<p class="description">
+				VentasLab te ayuda a interpretar datos.
+				Agrupa, controla y transforma la información de tus clientes en ventas.
+			</p>
+		</div>
+	</section>
 
-                <article class="feature">
-                        <figure class="information-imageContainer">
-                                <img class="information-image" src="assets/img/data.png" alt="data" width="auto">
-                        </figure>
-                    <div>
-                    <h1>Toma acción</h1>
-                    <p>Los datos son el petróleo del siglo XXI, entiende el mercado, toma 
-                        la ventaja ofreciendo soluciones a la medida.</p>
-                    </div>
-                </article>
-            </div>
+	<section id="Information" class="information">
+		<div class="wrapper">
+			<article class="feature">
+				<figure class="information-imageContainer">
+					<img class="information-image" src="img/socialNetworks.png" alt="Social Networks" width="auto">
+				</figure>
+				<div>
+					<h1>Analiza</h1>
+					<p>
+						De manera rápida y eficiente la información de las herramientas más populares
+						para recolectar datos. <br> (Google Analytics, Facebook Ads, Instagram, WhatsApp, Telegram)
+					</p>
+				</div>
+			</article>
 
-    </section>
+			<article class="feature">
+				<figure class="information-imageContainer">
+					<img class="information-image" src="img/information_circle.png" alt="information" width="auto">
+				</figure>
+				<div>
+					<h1>Interpreta</h1>
+					<p>Unifica la información en un solo lugar, toma decisiones de forma más fácil y rápida,
+						alcanza tus metas en ventas.
+					</p>
+				</div>
+			</article>
 
-    <section id="Calltoaction" class="calltoaction"> 
-    <div class="wrapper">
-            <!--<form action="/demo/" class="form-email">
-                <input type="text" placeholder="Inicia tu prueba gratis hoy">
-                <div>
-                <button class="botoncito">demo</button>
-                </div>
-            </form>
-            -->
-            <div>
-            <h1>Inicia tu prueba gratis hoy</h1>
-            </div>
-            <button>Demo</button>
-        </div>
-    </section>
+			<article class="feature">
+				<figure class="information-imageContainer">
+					<img class="information-image" src="img/data.png" alt="data" width="auto">
+				</figure>
+				<div>
+					<h1>Toma acción</h1>
+					<p>Los datos son el petróleo del siglo XXI, entiende el mercado, toma
+						la ventaja ofreciendo soluciones a la medida.</p>
+				</div>
+			</article>
+		</div>
 
-    <section  class="footer">
-            <div class="wrapper">
-                    <p>Designed by VentasLab</p>
-            </div>
-    </section>    
+	</section>
+
+	<section id="Calltoaction" class="calltoaction">
+		<div class="wrapper">
+			<div>
+				<h1>Inicia tu prueba gratis hoy</h1>
+			</div>
+			<button>Demo</button>
+		</div>
+	</section>
+
+	<section class="footer">
+		<div class="wrapper">
+			<p>Designed by VentasLab</p>
+		</div>
+	</section>
 </body>
+
 </html>
